# benchmarkingcpp_games_trading

./: .gitignore  Benchmarking C++ Applications.pptx  CMakeLists.txt  README.md  build.py  example_simulation.data  talk_notes.txt
fizzbuzz_benchmark/: CMakeLists.txt  main.cc  main_new.cc
fizzbuzz_server/: CMakeLists.txt  application.cc  application.h  fizzbuzz_server_main.cc  main.cc  main_new.cc  network.cc  timing.cc  timing.h
server/: CMakeLists.txt  application.cc  application.h  network.cc  network.h  server.cc  server_main.cc  timing.cc
sys_tests/: benchmark_server.py  fizzbuzz_analysis.ipynb  test_server.py  timelog_parser.py
tests/: benchmark_server.py  test_server.py
